Oscillate Theme/Oscillate.css
/*
Oscillate v0.6.1
by Valerio Lyndon
a Genshin Impact design
*/

@\import "https://dl.dropboxusercontent.com/s/smydsd5wwtt5ofi/Mermaid.css";
@\import "https://dl.dropboxusercontent.com/scl/fi/s9je4oepavvijvlwmqial/Genshin.css?rlkey=dmrpu1hld3wv30i8iqnsg4ci7";

/* Page Body */

html {
	--s-fade-bg: 250px;
	--s-fade-line: 30px;
	--s-row-w: clamp(600px, 70vw, 900px);
	
	--t-pause: .6s ease;
	--t-row: .24s ease;
	
	--i-bg-generic: url(https://i.imgur.com/2lJ1X6E.png);
	
	box-sizing: border-box;
	height: 100%;
} *, *::before, *::after {
	box-sizing: inherit;
}

* {
	cursor: url(https://i.imgur.com/CjahEnY.png) 2 2, default;
}
:link, :link * {
	cursor: url(https://i.imgur.com/nOrtOLo.png) 2 2, pointer;
}

body {
	position: relative;
	min-height: 100%;
	background: var(--i-bg-generic) center / cover no-repeat fixed #312127;
	font-size: 11px;
	font-family: Genshin, Tahoma, Helvetica, Arial, FontAwesome, sans-serif;
	transform-origin: center top;
}

a,
table#mal_control_strip a {
	text-decoration: none;
}

/* Cover Banner */

#recaptcha-terms {
	position: absolute; 
}

body::before {
	content: "";
	display: block;
	width: 100%;
	height: calc(100vh - 250px);
	background: url(https://i.imgur.com/2lJ1X6E.png) center / cover no-repeat fixed#312127;
}
body::after {
	content: "";
	position: absolute;
	top: 480px;
	width: 100%;
	height: 200px;
	background: url(https://i.imgur.com/XRcj5JM.png) center / contain no-repeat;
	filter: invert(1);
	transform-origin: center top;
	animation: intro-slide 1.8s ease backwards .2s;
}

@keyframes intro-slide {
	0% {
		opacity: 0;
		transform: translateY(-200px);
	}
	100% {
		opacity: 1;
		transform: translateY(0px);
	}
}

/* Side Bar */

body #mal_control_strip {
	position: fixed;
	top: 0;
	left: -100vw;
	z-index: 99;
	display: flex;
	height: 100%;
	background: url(https://i.imgur.com/2lJ1X6E.png) center / cover;
	transition: left var(--t-pause);
} body #mal_control_strip:hover {
	left: 0;
}

body #mal_control_strip:active,
body #mal_control_strip:not(:hover) {
	pointer-events: none;
}

#inlineContent {
	position: fixed;
	left: 25px;
	top: 25px;
	z-index: 101;
	display: block !important;
	width: 60px;
	height: 60px;
	cursor: url(https://i.imgur.com/nOrtOLo.png) 2 2, pointer;
}
#inlineContent:active,
#mal_control_strip:hover ~ #list_surround #inlineContent {
	pointer-events: none;
}

#mal_control_strip::before {
	content: "";
	position: absolute;
	left: calc(100vw - 17px);
	top: 0;
	width: calc(85px + 17px);
	height: 85px;
}
#mal_control_strip::after {
	content: "";
	position: absolute;
	left: calc(100vw + 25px);
	top: 25px;
	width: 60px;
	height: 60px;
	background: url(https://b.l3n.co/i/9MKpLe.webp) center / contain no-repeat;
	pointer-events: auto;
	transition: left var(--t-pause), top .2s ease;
}
#mal_control_strip:hover::after {
	left: 25px;
	top: -60px;
}

#mal_control_strip tbody {
	display: flex;
	width: 100%;
}

/* side strip */
#mal_control_strip tbody::before {
	content: "";
	display: block;
	width: 80px;
	height: 100%;
	background: linear-gradient(to bottom, #4b5465, #4b5465dd);
	border: 4px solid #938e8b;
	box-shadow: 0 0 2px #0008;
	border-width: 0 4px;
	pointer-events: auto;
}

/* main bg */
#mal_control_strip tr {
	display: block;
	width: 560px;
	padding: 15px;
	height: 100%;
	background: linear-gradient(to bottom, #eae5df, #eae5df88);
	flex: 0 0 auto;
	box-shadow: inset 4px 0 6px -4px #0008;
	pointer-events: auto;
}

#mal_control_strip tbody::after {
	content: "";
	display: block;
	height: 100%;
	background: url(https://c.l3n.co/i/9Lk8R9.webp) 80% center / auto no-repeat;
	flex: 1 1 auto;
	cursor: url(https://i.imgur.com/nOrtOLo.png) 2 2, pointer;
}

#mal_control_strip td {
	display: block;
}

table#mal_control_strip td div {
	margin: 0;
}


/* Namecard */

#mal_control_strip #mal_cs_listinfo {
	width: calc(100% + 30px);
	height: 264px;
	padding: 20px 32px;
	display: flex;
	flex-flow: column wrap;
	justify-content: start;
	margin: 40px -15px 15px;
	background: url(https://a.l3n.co/i/9nMcTa.webp) center / cover;
	color: #e8e4db;
}

#mal_cs_listinfo::before {
	order: 1;
	content: "";
	display: block;
	width: 112px;
	height: 112px;
	background: url(https://c.l3n.co/i/9MBbRA.webp) center -13px / auto 125% #dd8f61;
	border: 4px solid #ece7e1;
	border-radius: 50%;
	box-shadow: 0 0 0 8px #4a9ca744;
	margin: 8px;
}

#mal_cs_listinfo::after {
	order: 2;
	content: "UID 5889451";
	width: 150px;
	height: 24px;
	background: #42586e;
	border: 2px solid #70859b;
	border-radius: 12px;
	margin: 20px 11px 0 -9px;
	text-align: center;
	font: 16px Genshin;
}

#mal_cs_listinfo div:first-of-type {
	order: 3;
	width: calc(100% - 150px);
}
#mal_cs_listinfo div:last-of-type {
	order: 4;
	width: calc(100% - 150px);
}

td#mal_cs_listinfo a {
	display: block;
	width: 100%;
	height: 38px;
	text-indent: 10px;
	background: linear-gradient(to right, transparent, #07101222 10px, transparent);
}

td#mal_cs_listinfo a strong,
td#mal_cs_otherlinks a[href^="/profile/"] {
	font: 24px/38px Genshin;
}

td#mal_cs_otherlinks strong {
	display: contents;
	font-size: 0;
}
td#mal_cs_otherlinks a[href^="/profile/"] {
	position: absolute;
	left: 275px;
	top: 75px;
}

[data-owner=""] td#mal_cs_listinfo a strong {
	display: none;
}

#mal_cs_listinfo div > strong {
	display: grid;
	grid-auto-flow: row;
}

#mal_cs_listinfo div > strong::before {
	order: 1;
	content: "Professional Hirasawa Yui simp.";
	height: 60px;
	padding: 5px 10px;
	font: 16px/30px Genshin;
}

#mal_cs_listinfo div > strong::after {
	order: 1;
	content: "Adventure Rank: 60";
	display: block;
	height: 30px;
	margin-bottom: 5px;
	text-indent: 10px;
	font: 20px/30px Genshin;
	background: linear-gradient(to right, transparent, #07101222 10px, transparent);
}

#mal_cs_listinfo div:first-of-type::after {
	content: "";
	display: block;
	background: url(https://i.imgur.com/2Tcj77c.png) center / 325px auto no-repeat;
	height: 36px;
	margin-bottom: 5px;
	text-indent: 10px;
	font: 20px/30px Genshin;
}
/* ... */

